sort.basic.comb.AlgCombSort.scala.error
Compilation error:
AlgCombSort:5: error: not found: value t
  while (t==0 && ecart>1) {
         ^AlgCombSort:9: error: not found: value i
  i=0
  ^AlgCombSort:10: error: not found: value i
  while (i+ecart < x) {
         ^AlgCombSort:11: error: not found: value i
    if (plusPetit(i,i+ecart)==false) {
                  ^AlgCombSort:11: error: not found: value i
    if (plusPetit(i,i+ecart)==false) {
                    ^AlgCombSort:12: error: not found: value i
      echange(i,i+ecart)
              ^AlgCombSort:12: error: not found: value i
      echange(i,i+ecart)
                ^AlgCombSort:13: error: not found: value i
      i=i+1
      ^